# Rag-enterprise

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: cd.yml  ci.yml
chroma_data/21d8ea8c-701b-4e58-9935-212128e94fcb/: index_metadata.pickle
data/edgar/AAPL/: 10-K_2025-10-31.json
data/edgar/GS/: 10-K_2026-02-25.json
data/edgar/JPM/: 10-K_2026-02-13.json
data/edgar/MSFT/: 10-K_2025-07-30.json
data/edgar/TSLA/: 10-K_2026-01-29.json
data/sample/compliance/: aml_procedures.txt  regulatory_framework.txt
data/sample/research/: equity_research_tech.txt  fixed_income_outlook.txt
data/sample/risk_management/: credit_risk_policy.txt  market_risk_framework.txt
data/sample/sec_filings/: annual_report_10k.txt  quarterly_earnings_q4.txt
data/sample/trading/: trading_desk_procedures.txt
evaluation/: eval_config.py  run_evaluation.py
evaluation/datasets/: eval_questions.json  eval_questions_v2.json
evaluation/results/: eval_20260414_220855.json  eval_20260414_223543.json  eval_20260415_161807.json
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/environments/: dev.tfvars  prod.tfvars
infra/terraform/modules/ecr/: main.tf
infra/terraform/modules/ecs/: main.tf
infra/terraform/modules/secrets/: main.tf
infra/terraform/modules/vpc/: main.tf
scripts/: demo.sh  download_filings.py  generate_ground_truths.py  ingest_edgar.py  ingest_samples.py  seed_users.py  start.py  start.sh
src/: config.py  main.py
src/api/: audit.py  deps.py  middleware.py  router.py
src/api/routes/: admin.py  auth.py  documents.py  health.py  query.py
src/auth/: jwt_handler.py  models.py  rbac.py  repository.py
src/common/: exceptions.py  logging.py  schemas.py
src/edgar/: client.py  loader.py  parser.py
src/generation/: chains.py  llm_factory.py  prompts.py
src/guardrails/: financial_compliance.py  input_validator.py  output_safety.py  pii_detector.py  prompt_injection.py
src/ingestion/: chunking.py  embeddings.py  loaders.py  metadata.py  pipeline.py
src/mcp_server/: __init__.py  server.py
src/retrieval/: retriever.py  vector_store.py
tests/: conftest.py
tests/unit/: test_chunking.py  test_edgar_parser.py  test_financial_compliance.py  test_guardrails.py  test_jwt.py  test_rbac.py
