[project]
name = "rag-enterprise"
version = "0.1.0"
description = "SEC EDGAR filing analyzer with RAG, RBAC, guardrails, and RAGAS evaluation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # LangChain (pin to 0.3.x — 1.x has breaking API changes)
    "langchain>=0.3.0,<1.0",
    "langchain-core>=0.3.0,<1.0",
    "langchain-community>=0.3.0,<1.0",
    "langchain-groq>=0.2.0,<1.0",
    "langchain-google-genai>=2.0.0,<3.0",
    "langchain-huggingface>=0.1.0,<1.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # Vector Store
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0,<1.0",

    # SEC EDGAR HTML parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Auth
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # Observability
    "structlog>=24.0.0",

    # Rate Limiting
    "slowapi>=0.1.9",

    # Utilities
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "langchain-openai>=0.2.0",
]
# Heavy optional PII detection (~500MB with spaCy). Omit for Railway deploy.
pii = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S105", "B008", "UP042", "S104", "N818"]

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E501"]
"src/generation/prompts.py" = ["E501"]
"src/common/schemas.py" = ["E501"]
"src/edgar/loader.py" = ["E501"]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
